# obs-midi-viz

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
data/locale/: en-US.ini
docs/render/: gen-mockups.ps1  mockup.html
src/: midi-engine.cpp  midi-engine.hpp  osc-receiver.cpp  osc-receiver.hpp  plugin-main.cpp  plugin-support.c  plugin-support.h
src/sources/: cc-source.cpp  cc-source.hpp  daw-source.cpp  daw-source.hpp  dj-source.cpp  dj-source.hpp  drum-source.cpp  drum-source.hpp  piano-source.cpp  piano-source.hpp  synth-source.cpp  synth-source.hpp  waveform-source.cpp  waveform-source.hpp
